--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
+    <script src="https://cdn.tailwindcss.com"></script>
+
     
     <!--
       manifest.json provides metadata used when your web app is installed on a
